chore(dave): Add dependencies for wallet integration.

--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -19,18 +19,22 @@
         "@mantine/core": "^8.3.10",
         "@mantine/hooks": "^8.3.10",
         "@mantine/notifications": "^8.3.10",
+        "@rainbow-me/rainbowkit": "^2.2.10",
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "catalog:",
         "@vercel/analytics": "^1.6.1",
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.2",
+        "next": "^16.0.10",
         "ramda": "^0.32.0",
+        "ramda-adjunct": "^5.1.0",
         "react": "catalog:",
         "react-dom": "catalog:",
-        "next": "^16.0.10",
         "react-icons": "^5.5.0",
-        "viem": "catalog:"
+        "react-jazzicon": "^1",
+        "viem": "catalog:",
+        "wagmi": "catalog:"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^4.1.3",
