chore(dave): Bump nextJS and add used environment variables.

--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -7,6 +7,7 @@
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "dev": "next dev",
         "build": "next build",
+        "start": "next start",
         "lint": "eslint .",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
@@ -26,7 +27,7 @@
         "@vercel/analytics": "^1.6.1",
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.2",
-        "next": "^16.0.10",
+        "next": "^16.1.4",
         "ramda": "^0.32.0",
         "ramda-adjunct": "^5.1.0",
         "react": "catalog:",
