--- a/apps/dave/.env.production
+++ b/apps/dave/.env.production
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_DEBUG_ENABLED=false
 NEXT_PUBLIC_MOCK_ENABLED=false
 NEXT_PUBLIC_CARTESI_NODE_RPC_URL="http://127.0.0.1:10011/rpc"
+NEXT_PUBLIC_PROJECT_ID="YOUR_WC_PROJECT_ID"
+NEXT_PUBLIC_IS_CONTAINER=false
