feat(dave): Add mantine/forms and bump mantine deps to latest.

--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -17,9 +17,10 @@
     "dependencies": {
         "@cartesi/viem": "2.0.0-alpha.24",
         "@cartesi/wagmi": "2.0.0-alpha.27",
-        "@mantine/core": "^8.3.10",
-        "@mantine/hooks": "^8.3.10",
-        "@mantine/notifications": "^8.3.10",
+        "@mantine/core": "^8.3.13",
+        "@mantine/form": "^8.3.13",
+        "@mantine/hooks": "^8.3.13",
+        "@mantine/notifications": "^8.3.13",
         "@rainbow-me/rainbowkit": "^2.2.10",
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.35.0",
