chore(dave): Hint available env var for the node rpc address setup.

--- a/apps/dave/.env.development
+++ b/apps/dave/.env.development
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_DEBUG_ENABLED=false
 NEXT_PUBLIC_MOCK_ENABLED=false
 NEXT_PUBLIC_CARTESI_NODE_RPC_URL="http://127.0.0.1:10011/rpc"
+# NEXT_PUBLIC_NODE_RPC_URL="http://127.0.0.1:6751/anvil"
 NEXT_PUBLIC_PROJECT_ID="YOUR_WC_PROJECT_ID"
 NEXT_PUBLIC_IS_CONTAINER=false
