chore: Add codegen as a dependency to storybook turbo tasks

--- a/turbo.json
+++ b/turbo.json
@@ -32,9 +32,11 @@
             ]
         },
         "build-storybook": {
+            "dependsOn": ["codegen"],
             "outputs": ["dist/**", "storybook-static/**"]
         },
         "storybook": {
+            "dependsOn": ["codegen"],
             "outputs": ["dist/**", "storybook-static/**"]
         },
         "clean": {
