--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -30,6 +30,7 @@
         "@tanstack/react-query": "catalog:",
         "@vercel/analytics": "^1.6.1",
         "date-fns": "^4.1.0",
+        "dexie": "^4.0.11",
         "humanize-duration": "^3.33.2",
         "next": "^16.1.5",
         "pretty-ms": "^8",
