--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -40,6 +40,7 @@
         "react-dom": "catalog:",
         "react-icons": "^5.5.0",
         "react-jazzicon": "^1",
+        "semver": "^7.7.4",
         "viem": "catalog:",
         "wagmi": "catalog:"
     },
@@ -55,6 +56,7 @@
         "@types/ramda": "^0.31.1",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
+        "@types/semver": "^7.7.1",
         "@wagmi/cli": "^2.1.2",
         "eslint": "catalog:",
         "eslint-config-cartesi": "workspace:*",
