chore: upgrade mantine and add dependencies for Specifications port.

--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -19,19 +19,23 @@
     "dependencies": {
         "@cartesi/viem": "2.0.0-alpha.26",
         "@cartesi/wagmi": "2.0.0-alpha.30",
-        "@mantine/core": "^8.3.13",
-        "@mantine/form": "^8.3.13",
-        "@mantine/hooks": "^8.3.13",
-        "@mantine/notifications": "^8.3.13",
+        "@mantine/code-highlight": "^8.3.15",
+        "@mantine/core": "^8.3.15",
+        "@mantine/form": "^8.3.15",
+        "@mantine/hooks": "^8.3.15",
+        "@mantine/notifications": "^8.3.15",
         "@rainbow-me/rainbowkit": "^2.2.10",
         "@raugfer/jazzicon": "^1.0.6",
         "@react-spring/web": "^10.0.1",
+        "@shazow/whatsabi": "^0.14.1",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "catalog:",
         "@vercel/analytics": "^1.6.1",
+        "abitype": "1.2.3",
         "date-fns": "^4.1.0",
         "dexie": "^4.0.11",
         "humanize-duration": "^3.33.2",
+        "jotai": "^2.12.5",
         "next": "^16.1.5",
         "pretty-ms": "^8",
         "ramda": "^0.32.0",
@@ -41,6 +45,7 @@
         "react-icons": "^5.5.0",
         "react-jazzicon": "^1",
         "semver": "^7.7.4",
+        "uuid": "^11.1.0",
         "viem": "catalog:",
         "wagmi": "catalog:"
     },
